<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="inicio">Toque la pantalla para continuar</string>
    <string name="app_name">Qronos</string>
    <string name="arcade">Arcade</string>
    <string name="aventura">Aventura</string>
    <string name="opciones">Opciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="salir">Salir</string>
    <string name="camara">Camara</string>
    <!-- Arcade Pantalla -->
    <string name="helloArcade">Hola</string>
    <!-- SelecMJ Pantalla -->
    <string name="helloSelecMJ">Selecciona MJs</string>
    <string name="helloSelecPISTA">Selecciona Pistas</string>
    <!-- MJ1 -->
    <string name="Presentation">Aqui va una presentacion del juego wapa wapa con su musiquita tipica de minijuego de marcianitos</string>
    <string name="killthemall">KILL THEM ALL</string>
    <string name="bArcade">Arcade</string>
    <string name="bAventura">Aventura</string>
    <string name="bOpciones">Opciones</string>
    <string name="bReanudar">Reanudar</string>
    <string name="bRestart">Reiniciar</string>
    <string name="bSalir">Salir</string>
    <string name="bStart">Empezar</string>
    <string name="bCancel">Atras</string>
    <string name="bCrearAventura">Crear Aventura</string>
     <string name="bUnirseAventura">Unirse Aventura</string>
     <string name="bUsarAventura">Usar Aventura</string>
     <string name="bEditarAventura">Editar Aventura</string>
     <string name="inGame">Aventura</string>

</resources>