<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/b_crear_aventura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
   	android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/bCrearAventura" />
    
     <Button
        android:id="@+id/b_editar_aventura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        
        android:gravity="center"
        android:text="@string/bEditarAventura" />
     
      <Button
        android:id="@+id/b_usar_aventura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        
        android:gravity="center"
        android:text="@string/bUsarAventura" />

    <Button
        android:id="@+id/b_unirse_aventura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/bUnirseAventura" />

</LinearLayout>