<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_arcade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="4dp"
    android:weightSum="100" >

    <!-- BARRA SUPERIOR -->

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/actionbar"
        android:orientation="horizontal" >

        <!-- PARTE IZQ -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tVhello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="17dp"
                android:text="@+string/app_name"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/azul_action_bar" />
        </LinearLayout>
        <!-- PARTE DER -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ibInfoMain"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_menu_info" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_weight="99"
        android:orientation="vertical"
        android:paddingTop="90dp" >

        <Button
            android:id="@+id/bArcade"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="10dp"
            android:text="@string/bArcade"
            android:textColor="@drawable/button_text"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/bAventura"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="10dp"
            android:text="@string/bAventura"
            android:textColor="@drawable/button_text"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/bOpciones"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="10dp"
            android:text="@string/bOpciones"
            android:textColor="@drawable/button_text"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/bSalir"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="10dp"
            android:text="@string/bSalir"
            android:textColor="@drawable/button_text"
            android:textSize="20sp" >
        </Button>
    </LinearLayout>

</LinearLayout>